Lesson 21 - API Implementation: Implemented action to delete note
