# src/Controller/Api/NoteController.php
@@ -8,6 +8,7 @@ use App\Entity\Note;
 use App\Exception\ValidationException;
 use App\Model\API\ApiResponse;
 use Doctrine\ORM\EntityManagerInterface;
+use Sensio\Bundle\FrameworkExtraBundle\Configuration\IsGranted;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Annotation\Route;
@@ -52,5 +53,22 @@ class NoteController extends AbstractApiController
             'json',
             ['groups' => 'API']
         ));
+    }
+
+    /**
+     * @Route("/{id}", name="delete", methods={"DELETE"})
+     *
+     * @IsGranted("IS_SHARED", subject="note", statusCode=404)
+     */
+    public function delete(Note $note, EntityManagerInterface $entityManager): Response
+    {
+        if ($this->getUser() === $note->getUser()) {
+            $entityManager->remove($note);
+        } else {
+            $note->getUsers()->removeElement($this->getUser());
+        }
+        $entityManager->flush();
+
+        return new ApiResponse();
     }
 }
